# simple_matching_engine

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
config/: dev.json
include/: engine.hpp  enums.hpp  order.hpp  orderbook.hpp  types.hpp
src/: CMakeLists.txt  engine.cpp  order.cpp  orderbook.cpp
test/: CMakeLists.txt  tests.cpp
